add links as dependencias do readme

--- a/.env_example
+++ b/.env_example
@@ -3,13 +3,13 @@ NODE_ENV=development
 
 # Auth
 
-APP_SECRET=bootcampmeetapp
+APP_SECRET=
 
 # Database
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASS=docker
-DB_NAME=meetapp
+DB_HOST=
+DB_USER=
+DB_PASS=
+DB_NAME=
 
 # Mongo
 
